- fixed bug w.r.t. looseobjval; the coounting of number of loose variables in the LP data structure was incorrect in case a 
  variable got aggregated or multi-aggregated 
- fixed bug in debug.c w.r.t. checking of constraints and continuous variables
- fixed bug w.r.t. memory allocation for all values of a column in lpi_cpx.c

parameters:
- added parameter <constraints/quadratic/disaggregate> to split a block-separable quadratic constraint into several quadratic constraint
- added possible value 'e' for <constraints/soc/nlpform> to enable convex exponential-sqrt form for SOC constraint representation in NLP
- added parameter <constraints/indicator/removeIndicators> to remove indicator constraints if corresponding vub has been added
- change default value of parameter "nodeselection/restartdfs/selectbestfreq" 100
- added parameter "nodeselection/restartdfs/countonlyleafs" in node selector restart dfs which can be used to select 
  the counting process of processed nodes 
- added parameter <misc/resetstat> which state if the statistics should be reseted if the transformed problem is freed 
  (in case of a benders decomposition this parameter should be set to FALSE) default value is TRUE
- added parameter <misc/improvingsols> which state if only solution which have a better (or equal) primal bound 
  as the best know one are checked  is TRUE; this is of interest if the check of a solution is expensive; 
  default value is FALSE

interface:
- new method SCIPstartSolvingTime() and SCIPstopSolvingTime() which can be used to start or stop the solving time clock

SCIP version 2.0.0
===============

interface:
- new method SCIPbranchruleGetNRelaxCalls() to get the total number of times, a particular branching rule was called 
  on a relaxation solutions
- new method SCIPpermuteArray() that randomly shuffles an array using the Fisher-Yates algorithm
- new method SCIPgetRandomSubset() that draws a random subset of disjoint elements from a given set of disjoint elements